fix z-index

--- a/styles/kit-mensal.css
+++ b/styles/kit-mensal.css
@@ -23,7 +23,7 @@
   }
 
   & .book-container {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 100%;
     height: 1586px;
     position: relative;
@@ -35,7 +35,9 @@
       margin-top: 8.375rem;
       top: 0;
       left: 49%;
-      transform: translateX(-50%);  
+      transform: translateX(-50%); 
+      
+      z-index: 5;
     }
 
     & .yellowBookmark {
@@ -46,7 +48,7 @@
       left: 51%;
       transition: transform 300ms ease, top 300ms ease, left 300ms ease;
       
-      z-index: -1;
+      z-index: 4;
     }
 
     &:hover .yellowBookmark {
@@ -63,7 +65,7 @@
       left: 51%;
       transition: transform 300ms ease, top 300ms ease, left 300ms ease;
       
-      z-index: -2;
+      z-index: 3;
     }
 
     &:hover .purpleBookmark {
@@ -79,7 +81,7 @@
       top: 30%;
       left: 35%;
       transition: transform 300ms ease, top 300ms ease, left 300ms ease;
-      z-index: -1;
+      z-index: 3;
       
     }
 
@@ -95,7 +97,7 @@
       left: 38%;
       transition: top 300ms ease, left 300ms ease;
 
-      z-index: -1;
+      z-index: 3;
     }
 
     &:hover .arrow1 {
@@ -109,7 +111,7 @@
       left: 38%;
       transition: top 300ms ease, left 300ms ease;
 
-      z-index: -1;
+      z-index: 3;
     }
 
     &:hover .p1 {
@@ -123,7 +125,7 @@
       left: 38%; 
       transition: top 300ms ease, left 300ms ease;
 
-      z-index: -1;
+      z-index: 3;
     }
 
     &:hover .arrow2 {
@@ -137,7 +139,7 @@
       left: 38%;
       transition: top 300ms ease, left 300ms ease;
 
-      z-index: -1;
+      z-index: 3;
     }
 
     &:hover .p2 {
@@ -152,7 +154,7 @@
       right: 37%;  
       transition: top 300ms ease, right 300ms ease;
 
-      z-index: -1;
+      z-index: 3;
     }
 
     &:hover .arrow3 {
@@ -166,7 +168,7 @@
       right: 37%;
       transition: top 300ms ease, right 300ms ease;
 
-      z-index: -1;
+      z-index: 3;
     }
 
     &:hover .p3 {
